--- a/index.html
+++ b/index.html
@@ -1,20 +1,58 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Leonel Akanji | Embedded Engineer</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <title>Leonel Akanji | Embedded Systems Engineer</title>
+    <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
-  <h1>Hello, I'm Leonel Akanji</h1>
-  <p>Embedded Software Engineer 📍 New York, USA</p>
-  <p>Welcome to my personal website powered by GitHub Pages.</p>
-  <h2>🚀 Featured Projects</h2>
-  <ul>
-    <li><strong>AIDrawPen</strong> – A motion-based rehab device for kids</li>
-    <li><strong>Tiny-BLE-Stat</strong> – BLE interface for biosensors</li>
-    <li><strong>EFR32 ARM Cortex-M</strong> – Fast Data Collection for ML</li>
-    <li><strong>VivGIT FPGA Workflow</strong> – FPGA dev using VS Code</li>
-  </ul>
-  <p>🔗 <a href="https://www.linkedin.com/in/YOUR-LINKEDIN/">Connect on LinkedIn</a></p>
+    <header>
+        <div class="container">
+            <h1>Leonel Akanji Akanji</h1>
+            <p>📍 New York, USA | Embedded Software Engineer</p>
+            <nav>
+                <a href="#about">About</a>
+                <a href="#projects">Projects</a>
+                <a href="#contact">Contact</a>
+            </nav>
+        </div>
+    </header>
+
+    <main class="container">
+        <section id="about">
+            <h2>About Me</h2>
+            <p>
+                I'm a motivated Embedded Systems Engineer with expertise in C/C++, firmware development, AI/ML, and hardware design for microcontrollers, IoT systems, and real-time applications. I also specialize in PCB design, RTOS, BLE communication, and Edge AI.
+            </p>
+        </section>
+
+        <section id="projects">
+            <h2>Featured Projects</h2>
+            <ul>
+                <li><strong>AIDrawPen:</strong> Gesture-based AI drawing tool for kids’ rehabilitation</li>
+                <li><strong>Tiny-BLE-Stat:</strong> BLE sensor interface for electrochemical testing</li>
+                <li><strong>EFR32 ARM Cortex M:</strong> Rapid AI/ML data harvesting system</li>
+                <li><strong>VivGIT FPGA Workflow:</strong> Vivado automation with VS Code</li>
+                <li><strong>Fingerprint Scanner:</strong> Infant scanner with mobile control – 2nd prize at CITeR</li>
+            </ul>
+        </section>
+
+        <section id="contact">
+            <h2>Contact</h2>
+            <p>Email: <a href="mailto:akanjil@clarkson.edu">akanjil@clarkson.edu</a></p>
+            <p>LinkedIn: <a href="https://linkedin.com/in/akanjileonelakanji" target="_blank">akanjileonelakanji</a></p>
+            <p>GitHub: <a href="https://github.com/Ijnaka22len" target="_blank">@Ijnaka22len</a></p>
+        </section>
+    </main>
+
+    <footer>
+        <div class="container">
+            <p>&copy; 2025 Leonel Akanji</p>
+        </div>
+    </footer>
+
+    <script src="script.js"></script>
 </body>
 </html>
