--- a/index.html
+++ b/index.html
@@ -3,56 +3,48 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Leonel Akanji | Embedded Systems Engineer</title>
-    <link rel="stylesheet" href="style.css"/>
+    <title>Leonel Akanji | Projects</title>
+    <link rel="stylesheet" href="style.css" />
 </head>
 <body>
     <header>
         <div class="container">
-            <h1>Leonel Akanji Akanji</h1>
-            <p>📍 New York, USA | Embedded Software Engineer</p>
+            <h1>Leonel Akanji Projects</h1>
             <nav>
-                <a href="#about">About</a>
-                <a href="#projects">Projects</a>
-                <a href="#contact">Contact</a>
+                <a href="index.html">Projects</a>
+                <a href="about.html">About</a>
+                <a href="contact.html">Contact</a>
             </nav>
         </div>
     </header>
-
     <main class="container">
-        <section id="about">
-            <h2>About Me</h2>
-            <p>
-                I'm a motivated Embedded Systems Engineer with expertise in C/C++, firmware development, AI/ML, and hardware design for microcontrollers, IoT systems, and real-time applications. I also specialize in PCB design, RTOS, BLE communication, and Edge AI.
-            </p>
-        </section>
-
-        <section id="projects">
-            <h2>Featured Projects</h2>
-            <ul>
-                <li><strong>AIDrawPen:</strong> Gesture-based AI drawing tool for kids’ rehabilitation</li>
-                <li><strong>Tiny-BLE-Stat:</strong> BLE sensor interface for electrochemical testing</li>
-                <li><strong>EFR32 ARM Cortex M:</strong> Rapid AI/ML data harvesting system</li>
-                <li><strong>VivGIT FPGA Workflow:</strong> Vivado automation with VS Code</li>
-                <li><strong>Fingerprint Scanner:</strong> Infant scanner with mobile control – 2nd prize at CITeR</li>
-            </ul>
-        </section>
-
-        <section id="contact">
-            <h2>Contact</h2>
-            <p>Email: <a href="mailto:akanjil@clarkson.edu">akanjil@clarkson.edu</a></p>
-            <p>LinkedIn: <a href="https://linkedin.com/in/akanjileonelakanji" target="_blank">akanjileonelakanji</a></p>
-            <p>GitHub: <a href="https://github.com/Ijnaka22len" target="_blank">@Ijnaka22len</a></p>
-        </section>
-    </main>
-
-    <footer>
-        <div class="container">
-            <p>&copy; 2025 Leonel Akanji</p>
+        <h2>Featured Projects</h2>
+        <div class="project-grid">
+            <div class="project-card">
+                <img src="https://github.com/Ijnaka22len/AIDrawPen/raw/main/demo.gif" alt="AIDrawPen" />
+                <h3>AIDrawPen</h3>
+                <p>AI-powered drawing tool for pediatric rehabilitation.</p>
+                <a href="https://github.com/Ijnaka22len/AIDrawPen" target="_blank">View on GitHub</a>
+            </div>
+            <div class="project-card">
+                <img src="https://via.placeholder.com/300x200.png?text=Tiny-BLE-Stat" alt="Tiny-BLE-Stat" />
+                <h3>Tiny-BLE-Stat</h3>
+                <p>BLE interface for electrochemical sensors in point-of-care testing.</p>
+                <a href="https://github.com/Ijnaka22len" target="_blank">View on GitHub</a>
+            </div>
+            <div class="project-card">
+                <img src="https://via.placeholder.com/300x200.png?text=FPGA+Workflow" alt="VivGIT" />
+                <h3>VivGIT FPGA Workflow</h3>
+                <p>Vivado + VS Code development workflow for FPGA automation.</p>
+                <a href="https://github.com/Ijnaka22len/Vivado-VS-Code-Integration-for-FPGAs" target="_blank">View on GitHub</a>
+            </div>
+            <div class="project-card">
+                <img src="https://via.placeholder.com/300x200.png?text=Pokido" alt="Pokido Game Box" />
+                <h3>Pokido Game Box</h3>
+                <p>Interactive game for visually impaired users. Won Teknofest Prize.</p>
+                <a href="https://github.com/Ijnaka22len" target="_blank">View on GitHub</a>
+            </div>
         </div>
-    </footer>
-
-    <script src="script.js"></script>
+    </main>
 </body>
 </html>
