--- a/about.html
+++ b/about.html
@@ -13,6 +13,7 @@
             <nav>
                 <a href="index.html">Projects</a>
                 <a href="about.html">About</a>
+                <a href="blog.html">Blog</a>
                 <a href="contact.html">Contact</a>
             </nav>
         </div>
