--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
             <nav>
                 <a href="index.html">Projects</a>
                 <a href="about.html">About</a>
+                <a href="blog.html">Blog</a>
                 <a href="contact.html">Contact</a>
+                
             </nav>
         </div>
     </header>
