--- a/index.html
+++ b/index.html
@@ -23,19 +23,20 @@
         <h2>Featured Projects</h2>
         <div class="project-grid">
             <div class="project-card">
-                <img src="https://github.com/Ijnaka22len/AIDrawPen/raw/main/demo.gif" alt="AIDrawPen" />
+                <img src="assets/AIDrawPen_Annimation2_Nbg.gif" alt="AIDrawPen-animation" />
+                <img src="assets/EdgeComputing.png" alt="AIDrawPen" />
                 <h3>AIDrawPen</h3>
                 <p>AI-powered drawing tool for pediatric rehabilitation.</p>
                 <a href="https://github.com/Ijnaka22len/AIDrawPen" target="_blank">View on GitHub</a>
             </div>
             <div class="project-card">
-                <img src="https://via.placeholder.com/300x200.png?text=Tiny-BLE-Stat" alt="Tiny-BLE-Stat" />
+                <img src="assets/tinyBleStat.jpeg"Tiny-BLE-Stat" />
                 <h3>Tiny-BLE-Stat</h3>
                 <p>BLE interface for electrochemical sensors in point-of-care testing.</p>
                 <a href="https://github.com/Ijnaka22len" target="_blank">View on GitHub</a>
             </div>
             <div class="project-card">
-                <img src="https://via.placeholder.com/300x200.png?text=FPGA+Workflow" alt="VivGIT" />
+                <img src="assets/VivGIT.png" alt="VivGIT" />
                 <h3>VivGIT FPGA Workflow</h3>
                 <p>Vivado + VS Code development workflow for FPGA automation.</p>
                 <a href="https://github.com/Ijnaka22len/Vivado-VS-Code-Integration-for-FPGAs" target="_blank">View on GitHub</a>
