--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
                 <a href="https://github.com/Ijnaka22len/Vivado-VS-Code-Integration-for-FPGAs" target="_blank">View on GitHub</a>
             </div>
             <div class="project-card">
-                <img src="https://via.placeholder.com/300x200.png?text=Pokido" alt="Pokido Game Box" />
+                <img src="assets/dataSample.png" alt="Pokido Game Box" />
+                <img src="assets/T2_NER_ConfusionMatrix.png" alt="Pokido Game Box" />
                 <h3>Pokido Game Box</h3>
                 <p>Interactive game for visually impaired users. Won Teknofest Prize.</p>
                 <a href="https://github.com/Ijnaka22len" target="_blank">View on GitHub</a>
