--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
                 <a href="https://github.com/Ijnaka22len/Vivado-VS-Code-Integration-for-FPGAs" target="_blank">View on GitHub</a>
             </div>
             <div class="project-card">
-                <img src="assets/dataSample.png" alt="Pokido Game Box" />
-                <img src="assets/T2_NER_ConfusionMatrix.png" alt="Pokido Game Box" />
-                <h3>Pokido Game Box</h3>
-                <p>Interactive game for visually impaired users. Won Teknofest Prize.</p>
-                <a href="https://github.com/Ijnaka22len" target="_blank">View on GitHub</a>
+                <img src="assets/dataSample.png" alt="dataSample" />
+                <img src="assets/T2_NER_ConfusionMatrix.png" alt="T2_NER_ConfusionMatrix" />
+                <h3>Helix AI NLP: Classification & NER Model</h3>
+                <p>NLP techniques in analyzing clinical trial text data using Transformer-based models (DistilBERT). It includes two key tasks.</p>
+                <a href="https://github.com/Ijnaka22len/NLP_Calssification_NER" target="_blank">View on GitHub</a>
             </div>
         </div>
     </main>
